Development Portal (2014-03-21 shi)
==============================
New branding reflected on site
Links updated
Beige alert over entire site
Colour coding tables


Country Tracker (2014-03-20 shi)
==============================
No more inline styles for base.html
Naming conventions tightened to reflect new changes
Ctrack divs now changed to Dportal where needed
Code refactoring throughout for flexible css customisation


Country Tracker (2014-03-19 shi)
==============================
CSS classes clean up
Fixed flag sizes to align height, not width


Country Tracker (2014-03-13 shi)
==============================
CSS now has comments for sections
Fixed alignment bug for bar charts


Country Tracker (2014-03-11 shi)
==============================
Alerts added to non-IATI publisher in listings
Declaration added to XML SAVi
Added declarations to table headers where needed
Changed tooltip hover states to reflect data displayed
Tightened up whitespace for whole site
Added scrollTop in footer
Added icon for declarations
Added reporting-org to donor activities


Country Tracker (2014-03-10 shi)
==============================
Added breadcrumbs
Changed footer to include License
Graphs now include percentages in legend
Added Spanish translation
Transactions renamed to Spend
Added currency to headers
Declared IATI or Non-IATI (CRS & Others)
Added Donor/Year/Total spend to Donor Spend header
Added Current Spend to Donor Activities header


Country Tracker (2014-03-06 shi)
==============================
Added Data Investigators email link
Added icons
Added redesigned Donors/Sectors modules


Country Tracker (2014-03-05 shi)
==============================
Redesign View 3
Added Google map as beginning of District module
Started on localization modules
Added French translation
Changed SAVi order and design


Country Tracker (2014-02-28 shi)
==============================
Changed footer text


Country Tracker (2014-02-25 shi)
==============================