@@ -72,17 +72,18 @@ a.view_all_money:hover	{background-color:rgba(0,14,32,0.9); color:#fff;}
 /*	Map styles
 	============================================= */
 .map_wrap				{width:100%; min-height:300px; margin:0 auto; background-color:rgba(0,0,0,0.8); position:relative;}
-.map_info				{width:880px; margin:0 auto; top:0; left:-100px; right:-100px; padding:10px 0; font-size:18px; color:#fff; line-height:1.35em; position:absolute; background-color:rgba(0,14,32,0.9); border-radius:0 0 8px 8px; z-index:1; text-align:center;}
+.map_info				{width:800px; margin:0 auto; top:0; left:-100px; right:-100px; padding:10px 40px; font-size:18px; color:#fff; line-height:1.35em; position:absolute; background-color:rgba(52, 174, 255, 0.9); border-radius:0 0 8px 8px; z-index:1; text-align:center;}
  #map					{width:100%; height:400px;}
 
 /*	Stats (key figures) styles
 	============================================= */
 .stats_wrap				{width:990px; margin:0 auto; padding:40px 0;}
-.stats_title			{font-size:24px; color:#ccc; padding-bottom:10px;}
-.stats_title span		{font-size:18px; color:#B8C8CD; white-space:nowrap;}
-.stats_num				{font-size:128px; color:#2E98FF;}
-.stats_num.small		{font-size:64px;}
+span.stats_title		{display:block; font-size:24px; color:#ccc; padding-bottom:10px;}
+span.stats_title.small	{display:block; font-size:18px; color:#B8C8CD; white-space:nowrap;}
+span.stats_num			{display:block; font-size:128px; color:#2E98FF;}
+span.stats_num.small	{display:block; font-size:64px;}
 .declare.stats			{width:960px; margin:0 auto; padding-top:10px; color:#ccc; font-size:16px;}
+a.stats_link			{display:block; padding:30px 40px; height:100%;}
 
 /*	Active / Ended projects styles
 	============================================= */
@@ -170,6 +171,7 @@ table.money_mod td:nth-child(2)	{width:100px;}
 	============================================= */
 table.title				{width:100%; border-collapse:collapse; padding-bottom:15px; border-bottom:10px solid #fff;}
 table.title.space		{border-collapse:separate;} /* Active / Ended projects need spacing */
+table.title.space td:nth-child(3)	{padding-left:10px; width:200px;}
 table.title td			{font-size:32px; line-height:1.1em; color:#fff; vertical-align:bottom;}
 table.title tr:nth-child(1) td:nth-child(1)	{padding-right:10px; width:40px;}
 table.title tr:nth-child(2) td	{padding:0;}
@@ -180,7 +182,8 @@ table.title td.total_spend		{text-align:right;}
 /*	Table for Stats (key figures)
 	============================================= */
 table.stats				{width:990px; max-width:960px; border-collapse:separate; border-spacing:15px; border-left:0; border-right:0;}
-table.stats td			{background-color:rgba(0,14,32,0.7); padding:40px;}
+table.stats td			{background-color:rgba(0,14,32,0.7); padding:0px; border-radius:6px;}
+table.stats td:hover	{background-color:rgba(0,14,32,0.9);}
 
 /*	Table for Active / Ended projects
 	============================================= */
