@@ -301,6 +301,9 @@ View this in Spanish
 #flag_text
 flag
 
+#map_info_text
+This is a heat map of all activities for {country_name} that have been provided with precise locations.
+
 #footer_team_text
 A project by the Development Portal team
 
