@@ -301,6 +301,9 @@ Voir ce en Espagnol
 #flag_text 
 drapeau
 
+#map_info_text 
+Il s'agit d'une carte de chaleur de toutes les activités de {country_name} qui ont été fournis avec des emplacements précis.
+
 #footer_team_text 
 Un projet de l'équipe du Portail de développement 
 
