@@ -301,6 +301,9 @@ Ver esto en Español
 #flag_text 
 bandera
 
+#map_info_text 
+Este es un mapa de calor de todas las actividades para {country_name} que han sido proporcionados con ubicaciones precisas.
+
 #footer_team_text 
 Un proyecto por el equipo de Portal de Desarrollo 
 
