@@ -1,3 +1,10 @@
+Development Portal (2014-03-22 shi)
+==============================
+Heat map info
+Fix footer with translations
+Stats (key figures) are now links
+
+
 Development Portal (2014-03-21 shi)
 ==============================
 New branding reflected on site
